# utility-codes

algorithm/: combination.cpp
async_task/: async_task.c  async_task.h
capnp_demo/v1/: CMakeLists.txt  README.md  build.sh
capnp_demo/v1/proto/: messages.capnp
capnp_demo/v1/src/: core.cpp  ext.cpp
capnp_demo/v2/: CMakeLists.txt  README.md  demo.sh  run_core.sh  run_ext.sh
capnp_demo/v2/src/: core.cpp  ext.cpp
cmake_sample/: build.sh
db_service/: db_service.hpp
directory_watcher/: Makefile  Makefile_a  Makefile_so  directory_watcher.cpp  directory_watcher.h  directory_watcher.sln  directory_watcher.vcxproj  directory_watcher.vcxproj.filters  main.cpp
dos_sample/: adjust_virtual_monitor.bat  ascp_monitor.bat  check_file.bat  chia_calc.bat  chia_check.bat  chia_clean.bat  chia_filetime.bat  chia_find.bat  chia_update.bat  chia_worker.bat  configure_aspera_account.bat  create_computer_account.bat  delta_time.bat  loop_goto.bat  modify_file.bat  process_cpu_monitor.bat  reset_aspera.bat  scale_picture.bat  service.bat  sub_task.bat  virtual_monitor_adjust.bat
evaluate/: expression_login_evaluate.cpp
level_db/: level_db.cpp  level_db.h  level_db.sln  level_db.vcxproj  level_db.vcxproj.filters  main.cpp
lru_cache/: lru_cache.hpp
network_check/: network_check.c  network_check.h
os_system/: code_convert.cpp  create_link.cpp  cursor_style.h  display_settings.cpp  event_and_signal.cpp  mouse_keyboard.cpp  privileges.cpp  update_background.cpp
oss_client/: oss_client.cpp  oss_client.h
popen_ex/: popen_ex.cpp  popen_ex.h
shell_daemon/: ps.sh  restart.sh  scheduler_daemon.sh  start.sh  stop.sh
shell_sample/: delta_time.sh  sub_task.sh
spsc_queue/: spsc_queue.hpp
sqlite/: sqlite.hpp
stuck_checker/: stuck_check.c  stuck_check.h
uid_allocator/: bitmap_uid_allocator.hpp
